internal/fixtures/architecture/negative/python-cycle/apps/api/src/deepwork_api/application/a.py
from .b import VALUE_B

VALUE_A = VALUE_B
